# merkle-patricia-trie

./: .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json  requirements.txt  setup.py
.github/workflows/: deploy.yml  test.yml
mpt/: __init__.py  hash.py  mpt.py  nibble_path.py  node.py
tests/: test_vectors.py  tests.py
tests/test_vectors/: hex_encoded_securetrie_test.json  trieanyorder.json  trieanyorder_secureTrie.json  trietest.json  trietest_secureTrie.json
