[build-system]
requires = [
    'setuptools',
    # toml is in standard library in 3.11+
    'toml>=0.10.1;python_version<"3.11"',
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "merkle-patricia-trie"
authors = [{name = "sterliakov", email = "terlya.stas@gmail.com"}]
readme = "README.md"
description = "A simlpe Merkle Patricia Trie implementation"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Security :: Cryptography',
]
keywords = ["trie", "data-structures", "datastructures", "merkle-patricia-trie", "blockchain", "ethereum"]
dependencies = [
    'pysha3 ~= 1.0',
    'rlp ~= 2.0',
]
requires-python = ">=3.7"

[tool.setuptools.dynamic]
version = {attr = "mpt.__version__"}

[project.urls]
Home = "https://github.com/sterliakov/merkle-patricia-trie"
Source = "https://github.com/sterliakov/merkle-patricia-trie"
Issues = "https://github.com/sterliakov/merkle-patricia-trie/issues"

[tool.flake8]
exclude = """
    .git,
    .github,
    __pycache__,
    .pytest_cache,
    .env,
    env,
    .pyenv,
    pyenv,
    *.egg_info,
"""
max_line_length = 88
extend_ignore = [
    "E203",  # Invalid. Expressions like `[len(x) :]` conform with PEP8, but raise this.
    "SIM905",  # Allow statement "hello world".split() instead of list literal
    # "N806",  # Allow non-"lower_underscore" variables (it's too stupid rule)
    "PIE798",  # Allow class with only static methods for namespacing
    "RST306",  # Plugin can't resolve links defined in other docstrings.
    "RST304",  # No builtin roles, so too much to do manually.
    "RST301", "RST201",  # Incompatible with google doc style
    "D10",  # Missing annotations
    "D401",  # Imperative mood of first docstring line is not always encouraged
]
# Ignore
per-file-ignores = [
    "tests/*:D,RST,N802",  # We don't care about docstrings in tests; assertSomething case
]
max-complexity = 10

# Docstring validation
docstring-convention = "google"


[tool.isort]
profile = "black"
